# OptiPIM

./: CMakeLists.txt  setup_optipim.sh
cmake/modules/: FindGUROBI.cmake
data/: hbm_pim_1ch.json
